bug squash

--- a/themes/woosc/static/css/single.css
+++ b/themes/woosc/static/css/single.css
@@ -249,6 +249,7 @@ td {
 @media only screen and (max-width: 700px) {
     .modal-content {
         width: 100%;
+        height: auto;
     }
 }
 
